# JiraScripting_public

./: .env_template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  auth_and_headers.py  get_to_know_your_jira_instance.py  helpers.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pyre.yml
assignable_users/: get_assignable_users.py
create_jira_tickets/: create_fancy_jira_issue.py  create_jira_epic.py  create_jira_issue.py  create_jira_issue_with_parent.py
emailer/: README.md
just_for_fun/: README.md
part_0_my_jira_cloud_instance/: README.md  get_to_know_your_jira_instance.py
part_1_story_creation/: README.md  part_1_same_story_for_every_project.py  part_2_same_story_for_every_project_assigned_to_a_user.py  part_3_same_story_for_every_project_assigned_to_project_lead.py  part_4_same_story_for_every_project.py  part_4_same_story_for_every_project_assigned_with_report.py
part_2_epic_creation/: README.md  part_1_create_an_epic.py  part_2_create_many_linked_epics.py  part_3_create_many_linked_epics_with_record.py
part_3_creating_from_csv/: README.md  _description_document.py  part_1_create_from_csv.py  part_2_create_fancy_from_csv.py  part_3_create_in_projects_defined_in_csv.py
part_4_creating_assigning_and_emailing/: README.md  _comment_document.py  _email_body.py  _follow_up_email_body.py  part_1_create_assign_email.py  part_2_create_assign_email_prepaired_for_follow_up.py  part_3_follow_up_with_a_comment.py  part_4_follow_up_with_an_email.py  part_5_completeness_percentage_sunburst.py
src/: __init__.py
(+29 files in other folders)
